--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,9 @@
     --font-letter-spacing: 0.08em;
 }
 
+* {
+    margin: 0;
+}
 body{
     font: var(--font-body);
     background: var(--color-primary);
@@ -50,18 +53,12 @@ body{
 }
 
 h1{
-    font: var(--headline1);
+    font: var(--font-headline1);
     text-transform: uppercase;
 }
 
 h2{
-    font: var(--headline2);
-    text-transform: uppercase;
-    padding-block-start: 8px;
-    padding-block-end: 8px;
-    letter-spacing: .2em;
-    margin-block-start: 32px;
-    margin-block-end: 0px;
+    font: var(--font-headline2);
 }
 
 .sub-title{
