--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,33 +1,27 @@
 .btn{
-    font: var(--button);
-    text-transform: uppercase;
-    border-radius: 2px;
-    padding-inline-start: 24px;
-    padding-inline-end: 24px;
+    display: flex;
+    justify-content: center;
+    font: var(--font-button);
+    border-radius: 12px;
+    padding-block-start: 8px;
+    padding-block-end: 8px;
+    padding-inline-start: 32px;
+    padding-inline-end: 32px;
+    margin-block-start: 12px;
+    margin-block-end: 12px;
     text-decoration: none;
     cursor: pointer;
+    background-color: var(--color-vanilla);
+    border: 1px solid var(--color-secondary);
+    color: var(--color-secondary);
+}
+
+.btn img{
+    margin-right: 10px;
 }
 
 .btn-primary{
-    background-color: var(--primary2);
-    border: 2px solid var(--primary2);
-    color: var(--black);
-}
-
-.btn-primary:hover{
-    background-color: var(--withe);
-    color: var(--black);
-    border: 2px solid var(--withe);
-}
-
-.btn-secondary{
-    background-color: transparent;
-    color: var(--withe);
-    border: 2px solid var(--primary1);
-}
-
-.btn-secondary:hover{
-    background-color: var(--primary2);
-    color: var(--black);
-    border: 2px solid var(--primary1);
+    background-color:var(--color-white);
+    border-color: var(--color-link);
+    color: var(--color-primary);
 }
