--- a/css/index.css
+++ b/css/index.css
@@ -47,8 +47,7 @@
 }
 body{
     font: var(--font-body);
-    background-color: var(--color-primary);
-    min-block-size: 100vh;
+    background: var(--color-primary);
     color: var(--color-white);
     max-inline-size: 1158px;
 }
