Was updated skill section and styles

--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,8 @@
 @import "./buttons.css";
 @import "./section.css";
 @import "./console.css";
-/*@import "./skills.css";
-@import "./projects.css";
+@import "./skills.css";
+/*@import "./projects.css";
 @import "./hobbies.css";
 @import "./inspirations.css";
 @import "./form.css";
