--- a/css/console.css
+++ b/css/console.css
@@ -1,10 +1,29 @@
+.console__parallax{
+    position: relative;
+    height: 323px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 .console {
+    position: absolute;
     padding: 12px;
     color: var(--color-primary);
     background:var(--color-vanilla);
     border-radius: 12px;
     width: 530px;
     height: 248px;
+    margin: 0 auto;
+
+    transition: transform 0.5s .25s cubic-bezier(0, 1, .3, 1), opacity 0.3s .25s ease-out;
+    will-change: scroll-position;
+
+}
+
+/*CSS to console element parallax efect when user do scroll*/
+.console__parallax:hover .console {
+    transform: translateX(-300px);
+    opacity: 1;
 }
 
 .console__dots {
