--- a/css/skills.css
+++ b/css/skills.css
@@ -1,36 +1,41 @@
-.skill-item{
-    padding-block-start: 12px;
-}
-.skill-title h3{
-    font: var(--headline3);
-    text-transform: uppercase;
-    background-color: var(--gray);
-    max-width: min-content;
-    border-radius: 2px;
-    padding-inline-start: 2px;
-    padding-inline-end: 2px;
+.skills__item{
+    background-color: var(--color-secondary);
+    border-radius: 12px;
+    padding: 20px;
+    margin-bottom: 18px;
+    cursor: pointer;
 }
 
-.skill-description p{
-    padding-inline-start: 12px;
-    padding-block-start: 12px;
-    padding-block-end: 8px;
-    border: 1px;
-    border-left-style: solid;
-    border-left-color: var(--gray);
-    border-top-style: solid;
-    border-top-color: var(--gray);
-    border-radius: 2px;
+.skills__item:hover{
+    box-shadow: 0 0 5px var(--color-vanilla);
 }
 
+.skills__item > summary{
+    list-style-type: none;
+}
 
-@media screen and (min-width: 768px){
-    .skills{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .skill-item{
-        max-width: 325px;
-    }
+.skills__item summary{
+    display: flex;
+    align-items: center;
+    font: var(--font-headline3);
+    color: var(--color-primary);
+}
+
+.skills__item summary:focus-visible {
+    outline: 1px solid var(--color-white);
+}
+
+.skills__item p{
+    margin-top: 12px;
+}
+
+.skills__item span{
+    align-self: baseline;
+}
+
+summary svg {
+    width: 32px;
+    height: 32px;
+    margin-right: 18px;
+    fill: var(--color-primary);
 }
