was added projects section, styles and icons to skills

--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@
 @import "./section.css";
 @import "./console.css";
 @import "./skills.css";
-/*@import "./projects.css";
-@import "./hobbies.css";
+@import "./projects.css";
+/*@import "./hobbies.css";
 @import "./inspirations.css";
 @import "./form.css";
 @import "./footer.css"; */
