--- a/css/buttons.css
+++ b/css/buttons.css
@@ -25,3 +25,18 @@
     border-color: var(--color-link);
     color: var(--color-primary);
 }
+
+.btn-primary:hover {
+    background-color:var(--color-link);
+    color: var(--color-white);
+}
+
+.btn-secondary{
+    border-color: var(--color-vanilla);
+    color: var(--color-secondary);
+}
+
+.btn-secondary:hover{
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
+}
