--- a/css/projects.css
+++ b/css/projects.css
@@ -1,47 +1,72 @@
-.project-item{
-    padding-block-start: 32px;
+.projects__container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-.project-title{
-    height: 30px;
-    background-image: url(../img/bkg-project-title.svg);
+
+.project{
+    max-width: 550px;
+    height: 340px;
+    background: #6A7B76;
+    border-radius: 12px;
+    display: flex;
+    overflow: hidden;
+    margin-bottom: 28px;
+}
+
+.project:hover {
+    box-shadow: 0 0 5px var(--color-vanilla);
+}
+
+.description {
+    padding: 15px;
+    align-self: flex-end;
+    height: 182px;
+    background: linear-gradient(180deg, rgba(196, 196, 196, 0) 0%, var(--color-secondary) 100%);
+}
+
+.description h2 {
+    margin: 0;
+    color: var(--color-link);
+}
+
+.description p {
+    color: var(--color-white);
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.08em;
+    text-shadow: 0px 0px 6px rgba(0, 34, 48, 0.4);
+}
+
+.button__group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: auto;
+}
+
+.button__group a{
+    margin-right: 10px;
+}
+
+#codi {
+    background: url('../img/background-codi.png'), #6A7B76;
     background-repeat: no-repeat;
-}
-.project-title h3{
-    font: var(--headline4);
-    text-transform: uppercase;
-    color: var(--black);
-    padding-inline-start: 12px;
-    padding-block-start: 3px;
+    background-size: cover;
+    background-position: right 25% bottom 75%;
 }
 
-.project-description{
-    margin-block-start: 23px;
-    padding-inline-start: 12px;
-    padding-block-start: 12px;
-    padding-block-end: 8px;
-    border: 1px;
-    border-right-style: solid;
-    border-right-color: var(--primary2);
-    border-bottom-style: solid;
-    border-bottom-color: var(--primary2);
-    border-radius: 2px;
+#shoppingcar {
+    background: url('../img/background-shopping.png'), #6A7B76;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right 25% bottom 75%;
 }
 
-.project-description button{
-    margin-block-start: 32px;
-}
-
-@media screen and (min-width: 768px){
-    .projects{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .project-item{
-        max-width: 325px;
-    }
-
-    .project-description{
-        min-block-size: 170px;
-    }
+#catstagram {
+    background: url('../img/background-catstagram.png'), #6A7B76;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right 25% bottom 75%;
 }
