--- a/css/inspirations.css
+++ b/css/inspirations.css
@@ -1,52 +1,40 @@
-.inspiration-item{
+.inspiration__item {
     display: flex;
-    padding-block-start: 32px;
+    flex-direction: row;
+    margin-bottom: 32px;
 }
 
-.inspiration-item img{
-    height: 50px;
+.inspiration__image, .inspiration__image img {
+    border-color: 2px solid var(--color-vanilla);
+    align-self: flex-end;
+    width: 40px;
+    height: 40px;
 }
 
-.inspiration-item img:hover{
-    filter: drop-shadow(0 0 5px var(--primary2));
+.inspiration__content {
+    background-color: var(--color-secondary);
+    border: 1px solid var(--color-white);
+    max-width: 400px;
+    max-height: 203px;
+    border-radius: 12px 12px 12px 0px;
+    margin-left: 8px;
+    padding: 12px;
 }
 
-.inspiration-description{
-    padding-inline-start: 16px;
+.inspiration__item--right {
+    flex-direction: row-reverse;
 }
 
-.inspiration-name h3{
-    font: var(--headline4);
-    text-transform: uppercase;
-    margin: 0;
+.inspiration__item--right .inspiration__content {
+    margin-left: 0;
+    margin-right: 8px;
 }
 
-.inspiration-do p{
-    margin: 0;
-    margin-block-start: 5px;
+.inspiration__content h5 {
+    color: var(--color-primary);
 }
 
-@media screen and (min-width: 768px){
-    .inspirations{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-    .inspiration-item{
-        min-width: 325px;
-    }
-}
-
-@media screen and (min-width: 1024px){
-    .inspiration-item img{
-        height: 100px;
-    }
-    
-    .inspiration-item{
-        min-width: 525px;
-    }
-    
-    .inspiration-description{
-        padding-block-start: 16px;
-    }
+.inspiration__content blockquote {
+    font: var(--font-headline3);
+    margin: 18px 12px;
 }
