was added footer section, icons, curriculum and styles

--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,7 @@
 @import "./projects.css";
 @import "./hobbies.css";
 @import "./inspirations.css";
-/*@import "./form.css";
-@import "./footer.css"; */
+@import "./footer.css";
 /*------ Variables ------*/
 :root{
     /*------ Colors ------*/
