--- a/css/footer.css
+++ b/css/footer.css
@@ -1,17 +1,31 @@
 .footer{
-    min-block-size: 58px;
-    background-color: var(--primary1);
-    margin-block-start: 32px;
+    background-color: var(--color-vanilla);
+    color: var(--color-primary);
 }
 
-.footer p{
-    margin: 0px;
-    padding-block-start: 10px;
-    font: var(--headline5);
-    color: var(--withe);
+.footer__content {
     text-align: center;
+    padding: 25px;
 }
 
-.footer p:nth-child(1){
-    text-transform: uppercase;
+.footer__contact {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.footer__social {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.footer__social a {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100px;
+    height: 80px;
+    color: var(--color-primary);
 }
