was update media-queryes to about me section

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@
 @import "./buttons.css";
 @import "./section.css";
 @import "./console.css";
+@import "./aboutme.css";
 @import "./skills.css";
 @import "./projects.css";
 @import "./hobbies.css";
