--- a/css/console.css
+++ b/css/console.css
@@ -17,10 +17,8 @@
 
     transition: transform 0.5s .25s cubic-bezier(0, 1, .3, 1), opacity 0.3s .25s ease-out;
     will-change: scroll-position;
-
 }
 
-/*CSS to console element parallax efect when user do scroll*/
 .console__parallax:hover .console {
     transform: translateX(-300px);
     opacity: 1;
@@ -79,4 +77,11 @@
 
 .console-command {
     color: goldenrod;
+}
+
+@media only screen and (min-width: 560px) {
+    .console__parallax {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
