--- a/css/console.css
+++ b/css/console.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 323px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .console {
