--- a/css/skills.css
+++ b/css/skills.css
@@ -22,10 +22,6 @@
     color: var(--color-primary);
 }
 
-.skills__item summary:focus-visible {
-    outline: 1px solid var(--color-white);
-}
-
 .skills__item p{
     margin-top: 12px;
 }
@@ -46,46 +42,66 @@ summary svg {
     color: var(--color-secondary);
 }
 
-@media only screen and (min-width: 560px) {
+@media only screen and (min-width: 660px) {
     #skills {
         padding-inline-end: 0;
     }
 
     .skills {
+        background-image: url('../img/background-skills.svg');
+        background-repeat: no-repeat;
+        background-position-x: right;
+        background-position-y: center;
+
         display: grid;
-        height: 80vh;
-        grid-template-columns: [first] 40% 60% [end];
+        height: 85vh;
+        grid-template-columns: [first] 35% 65% [end];
         grid-template-rows: [first] repeat(7, 1fr);
     }
+    
     .skills__item{
         background-color: transparent;
         width: 50px;
         height: 50px;
         margin: auto;
+
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
     }
     
     .skills__item:hover{
         box-shadow: none;
     }
     
-    .skills__item summary p{
+    .skills__item p{
         color: var(--color-white);
     }
-    
-    .skills__item summary:focus-visible {
-        outline: none;
+
+    .skills__item summary:focus {
+        outline: transparent;
+        list-style: transparent;
     }
 
     summary svg {
         fill: var(--color-link);
+        margin-right: 0;
     }
     
+    .skills__item summary{
+        flex-direction: column;
+        width: 100px;
+    }
+
     .skills__item p{
         margin-top: 32px;
     }
 
     .skills__item span{
-        display: none;
+        font-size: 12px;
+        align-self: center;
+        color: var(--color-white);
     }
 
     .skills__item[open]{
@@ -97,19 +113,52 @@ summary svg {
         grid-row-end: 7;
     }
 
-    .skills__item[open] span{
-        display: block;
-        color: var(--color-link);
+    .skills__item[open] summary{
+        flex-direction: row;
+        text-align: left;
+        width: inherit;
     }
 
-    .skills {
-        background-image: url('../img/background-skills.svg');
-        background-repeat: no-repeat;
-        background-position-x: right;
-        background-position-y: center;
+    .skills__item[open] summary svg{
+        margin-right: 18px;
     }
+
+    .skills__item[open] span{
+        display: block;
+        font: var(--font-headline3);
+        color: var(--color-link);
+        width: 280px;
+    }
+    
 }
 
 @media only screen and (min-width: 1024px) {
-    
+
 }
+
+@-webkit-keyframes fadeInRight {
+    0% {
+       opacity: 0;
+       -webkit-transform: translateX(40px);
+    }
+    100% {
+       opacity: 1;
+       -webkit-transform: translateX(0);
+    }
+ }
+ 
+ @keyframes fadeInRight {
+    0% {
+       opacity: 0;
+       transform: translateX(40px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+ }
+ 
+ .fadeInRight {
+    -webkit-animation-name: fadeInRight;
+    animation-name: fadeInRight;
+ }
