--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
 @import "./hero.css";
 @import "./buttons.css";
 @import "./section.css";
+@import "./aboutme.css";
 @import "./console.css";
 @import "./skills.css";
 @import "./projects.css";
