Thank midu to choice my profile and give me more power to learn and keep push my career... thanks a lot

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@
     --color-primary: #002230;
     --color-secondary: #6A7B76;
     --color-white: #F2F2F2;
+    --color-black: #111111;
     --color-vanilla: #EBEBD3;
     --color-link: #F96E46;
     --color-link-hover: #C03221;
