--- a/css/hero.css
+++ b/css/hero.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .hero__image{
@@ -122,6 +123,8 @@
 
     .hero{
         align-items: flex-start;
+        justify-content: flex-start;
+
     }
 
     .hero__image{
@@ -170,7 +173,7 @@
         margin: 12px 0 0 0;
     }
 
-    .hero__hello, .hero__myname, .hero__role {
+    .hero__myname, .hero__role {
         margin-bottom: 32px;
     }
 
