--- a/css/projects.css
+++ b/css/projects.css
@@ -25,12 +25,13 @@
     padding: 15px;
     align-self: flex-end;
     height: 192px;
-    background: linear-gradient(180deg, rgba(196, 196, 196, 0) 0%, var(--color-secondary) 100%);
+    background: linear-gradient(180deg, rgba(138, 137, 137, 0) 0%, var(--color-black) 100%);
 }
 
 .description h3 {
     margin: 0;
     color: var(--color-link);
+    text-shadow: 0px 0px 2px var(--color-black);
 }
 
 .description p {
