--- a/css/projects.css
+++ b/css/projects.css
@@ -54,21 +54,21 @@
 }
 
 #codi {
-    background: url('/img/background-codi.png'), #6A7B76;
+    background: url('https://raw.githubusercontent.com/JoeMancera/JoeMancera/master/img/background-codi.png'), #6A7B76;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right 25% bottom 75%;
 }
 
 #shoppingcar {
-    background: url('/img/background-shopping.png'), #6A7B76;
+    background: url('https://raw.githubusercontent.com/JoeMancera/JoeMancera/master/img/background-shopping.png'), #6A7B76;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right 25% bottom 75%;
 }
 
 #catstagram {
-    background: url('/img/background-catstagram.png'), #6A7B76;
+    background: url('https://raw.githubusercontent.com/JoeMancera/JoeMancera/master/img/background-catstagram.png'), #6A7B76;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right 25% bottom 75%;
