--- a/css/skills.css
+++ b/css/skills.css
@@ -191,7 +191,7 @@ summary svg {
     }
 
     .skill__background {
-        background-image: url('../img/background-skills.svg');
+        background-image: url('https://raw.githubusercontent.com/JoeMancera/JoeMancera/master/img/background-skills.svg');
         background-repeat: no-repeat;
         background-position-x: right;
         background-position-y: center;
