feat: add data for all sections

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -24,11 +24,13 @@ import Console from './Console.astro'
 <section id="about-me" class="container">
   <h2 class="section__title">About me</h2>
   <p class="section__description">
-    My name is Joe Mancera. I’m from Colombia and I have experience in different
-    roles with backend and frontend dev. I'm a passionate learner and I'm always
-    looking for new challenges and opportunities to grow my skills. I have
-    worked on high-performance teams, developing the best tools and technologies
-    to solve problems.
+    Colombian professional with +7 years of experience in various roles,
+    including backend and frontend development. I am a passionate learner who
+    constantly seeks new challenges and opportunities to enhance my skillset.
+    With a strong proficiency in Figma, I effectively bridge the gap between
+    development and design teams, facilitating seamless collaboration. I have
+    been part of high-performing teams, contributing to the development of
+    cutting-edge tools and technologies to solve complex problems.
   </p>
   <Console />
 </section>
