--- a/src/components/Hobbies.astro
+++ b/src/components/Hobbies.astro
@@ -44,7 +44,7 @@
         <h3>Photography</h3>
       </div>
       <div class="hobby__image">
-        <img src="./img/hobby-photografy.png" alt="" loading="lazy" />
+        <img src="./img/hobby-photography.png" alt="" loading="lazy" />
       </div>
     </div>
     <div class="hobby">
