feat: implement experience component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Projects from '@/components/Projects/index.astro'
 import Skills from '@/components/Skills.astro'
 import Hobbies from '@/components/Hobbies.astro'
 import Inspirations from '@/components/Inspirations.astro'
+import Experience from '@/components/Experience.astro'
 
 const title = 'Joe Mancera | Web Developer 🚀'
 const description =
@@ -17,6 +18,7 @@ const description =
   <Weave />
   <Hero />
   <AboutMe />
+  <Experience />
   <Projects />
   <Skills />
   <Hobbies />
