--- a/src/components/Inspirations.astro
+++ b/src/components/Inspirations.astro
@@ -104,7 +104,7 @@
         </blockquote>
       </div>
     </div>
-    <div class="inspiration__item inspiration__item--right">
+    <div class="inspiration__item inspiration__item">
       <figure class="inspiration__image">
         <img
           src="./img/tatiana-calderon.png"
@@ -122,7 +122,7 @@
         </blockquote>
       </div>
     </div>
-    <div class="inspiration__item">
+    <div class="inspiration__item inspiration__item--right">
       <figure class="inspiration__image">
         <img src="./img/robbie.png" alt="Robbie J. Frie" loading="lazy" />
       </figure>
@@ -134,7 +134,7 @@
         </blockquote>
       </div>
     </div>
-    <div class="inspiration__item inspiration__item--right">
+    <div class="inspiration__item inspiration__item">
       <figure class="inspiration__image">
         <img
           src="./img/lewis-hamilton-turkey.png"
