build: add astro conf to deploy GH pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -152,6 +152,9 @@
       </li>
       <li><a href="#main" title="Go to hello section">Hello</a></li>
       <li><a href="#about-me" title="Go to about me section">About me</a></li>
+      <li>
+        <a href="#experience" title="Go to experience section">Experience</a>
+      </li>
       <li><a href="#projects" title="Go to projects section">Projects</a></li>
       <li><a href="#skills" title="Go to skills section">Skills</a></li>
     </ul>
